--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -11,6 +11,11 @@ body{
     @apply sm:w-[850px] sm:h-[600px] sm:rounded-lg shadow-form;
  }
 
+ .bg-banner-home{
+    background-image: url("../assets/home-banner.jpg");
+    @apply bg-no-repeat bg-cover bg-left lg:bg-center;
+ }
+
 .focus-button{
     @apply focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2;
 }
